# aip-qx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  refactor_imports.py  requirements.txt  setup.cfg
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: config.py  constants.py  dependencies.py  exceptions.py  main.py
backend/core/: audit_helpers.py  auth_cookies.py  celery_app.py  circuit_breaker.py  client_ip.py  database.py  database_base.py  logging_config.py  oidc.py  redis_client.py  security.py
backend/fabric_client/: events.py  network.py  retry.py  wallet.py
backend/grpc_generated/: agent_pb2.py  agent_pb2_grpc.py  assets_pb2.py  assets_pb2_grpc.py  audit_pb2_grpc.py  auth_pb2.py  auth_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  compliance_pb2.py  compliance_pb2_grpc.py  organizations_pb2.py  organizations_pb2_grpc.py  transactions_pb2.py  transactions_pb2_grpc.py  zkp_pb2_grpc.py
backend/grpc_server/: interceptors.py  server.py
chaincode/rwa-token/: .gitignore  Dockerfile.ccaas  README.md  access_control.go  chaincode.go  chaincode_test.go  compliance.go  go.mod  go.sum  main.go  models.go
cli/: async_runner.py  cache.py  main.py  network_state.py  requirements.txt  settings.py
cli/api/: assets.py  audit.py  auth.py  events.py  organizations.py  transactions.py
cli/commands/: _common.py  agent.py  assets.py  audit.py  auth.py  compliance.py  dashboard.py  events.py  organizations.py  system.py  transactions.py  tribunal.py  zkp.py
cli/http/: __init__.py  auth.py  client.py  exceptions.py
cli/security/: audit.py  pkce.py  tokens.py
cli/ui/: ascii.py  console.py  dashboard.py  repl.py
core/: config.py  dependencies.py  exceptions.py  main.py
core/core/: audit_helpers.py  auth_cookies.py  celery_app.py  celery_async.py  circuit_breaker.py  client_ip.py  database.py  database_base.py  logging_config.py  metrics.py  oidc.py  redis_client.py  security.py
core/fabric_client/: events.py  network.py  retry.py  wallet.py
core/features/fhe/: CMakeLists.txt  context.py  helib_ckks.cpp  scorer.py  setup.py
core/grpc_generated/: agent_pb2_grpc.py  assets_pb2_grpc.py  audit_pb2.py  audit_pb2_grpc.py  auth_pb2_grpc.py  compliance_pb2_grpc.py  organizations_pb2_grpc.py  transactions_pb2_grpc.py  zkp_pb2.py  zkp_pb2_grpc.py
core/grpc_server/: interceptors.py  server.py
database/migrations/: README.md  env.py  script.py.mako
database/sql/: 01_schema.sql  02_seed_organizations_users.sql  03_seed_assets.sql  04_seed_transactions_compliance.sql  06_seed_morocco.sql
db/migrations/: README.md  env.py
db/sql/: 01_schema.sql  02_seed_organizations_users.sql  03_keycloak_migration.sql  04_seed_assets.sql  04_seed_transactions_compliance.sql  06_views_functions.sql  07_seed_morocco.sql  08_zkp_tables.sql
deployment/: deploy_and_test.sh  gen_dashboard.py  remote_setup.py
deployment/keycloak/: check-pg.sh  configure-identity-first.py  docker-compose.keycloak.yml  migrate-users.py  rename-rwa-to-pex.py  setup-db.sh  setup-realm.py  test-pg-conn.sh
deployment/monitoring/: alerts.yml  celery-exporter.service  gen_dashboard.py  (+2 more)
docs/: README.md  diagrams.md  game_theory_proof.tex  guide_installation.tex  use-cases.md  zk_kyc_formal_proof.tex
frontend/: README.md  angular.json  index.html  package-lock.json  package.json  proxy.conf.json  tsconfig.json  vite.config.js
proto/: agent.proto  assets.proto  audit.proto  auth.proto  common.proto  compliance.proto  organizations.proto  transactions.proto  zkp.proto
scripts/: celery_exporter.py  deploy_frontend_to_vm.py  generate_protos.sh  generate_report.py  health_check.py  install_latex.sh  seed_db.py  simulate_dashboard.py  simulate_full.py  simulate_jitter.py
tests/: conftest.py
whitepaper/: main.tex
(+307 files in other folders)
