[project]
name = "pxtly"
version = "1.0.0"
description = "Institutional Real-World Asset tokenisation on Hyperledger Fabric — MiCA compliance, dual endorsement, ZK-KYC, FHE fraud scoring, regulatory RAG agent."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Zakaria Rahali", email = "pxtly.yovtg@aleeas.com" }]
keywords = ["blockchain", "hyperledger-fabric", "tokenization", "rwa", "compliance", "mica", "kyc", "aml", "zkp", "fhe"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security :: Cryptography",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/zak-li/pxtly"
Repository = "https://github.com/zak-li/pxtly"
Issues = "https://github.com/zak-li/pxtly/issues"
Changelog = "https://github.com/zak-li/pxtly/blob/master/CHANGELOG.md"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]


[tool.coverage.run]
source = ["core"]
omit = ["core/**/tasks.py", "tests/*"]


[tool.coverage.report]
fail_under = 70
show_missing = true


[tool.ruff]
target-version = "py312"
line-length = 110
extend-exclude = [
    ".venv",
    "venv",
    "ENV",
    "db/migrations/versions",
]

[tool.ruff.lint]
# Enable the rule sets that actually catch bugs, not stylistic noise.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear (likely bugs)
    "S",    # bandit-style security checks
    "ASYNC",
    "UP",   # pyupgrade
    "RUF",
]
# B008: FastAPI Depends(...) defaults are idiomatic.
# S101: assert is fine in tests.
# S104: bind 0.0.0.0 — only used in dev (vite proxy).
# S311: random is used for jitter, not crypto.
ignore = ["B008", "S101", "S104", "S311", "E501"]

[tool.ruff.lint.per-file-ignores]
"core/features/agent/groq_client.py" = ["E501"]   # long prompt strings
"core/features/zkp/*"                = ["S324"]   # SHA-1 not used; SHA-256/SHA-512 only
"tests/**"                              = ["S", "B"]
# CLI-specific exceptions:
"cli/main.py"                = ["E402"]   # Typer pattern: configure_logging() before sub-app imports
"cli/api/auth.py"            = ["RUF012", "ASYNC109"]  # single-shot loopback handler + intentional timeout param
"cli/ui/console.py"          = ["S605", "S607"]  # `cls`/`clear` for fullscreen REPL is intentional
"cli/ui/ascii.py"            = ["S110"]   # terminal init swallows errors by design
"cli/security/pkce.py"       = ["RUF003"]  # ambiguous EN-DASH in prose comment
